# CMake

./: CMakeLists.txt  README.md
src/: main.c  my_lib.c
